# air-quality-monitoring-data-platform

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
docs/architecture/: adr-001-scope-freeze-and-golden-path.md  adr-002-golden-dag-contract-and-idempotency.md
scripts/: airflow-init.sh
src/api/: __init__.py
src/ingest/: __init__.py
tests/: test_imports.py
