[tool.poetry]
name = "airquality-platform"
version = "0.1.0"
description = "Air quality monitoring data platform with multi-cloud processing"
authors = ["ansegundo <ansegundo@gmail.com>"]
readme = "README.md"
packages = [
    {include = "ingest", from = "src"},
    {include = "api", from = "src"}
]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"

pandas = "^2.2.0"
requests = "^2.31.0"
boto3 = "^1.34.0"
psycopg2-binary = "^2.9.9"  
apache-airflow = "~2.10.3"

fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
sqlalchemy = ">=1.4.36,<2.0"
pydantic = "^2.9.0"
pydantic-settings = "^2.9.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.0"
pytest-cov = "^6.1.1"
pytest-mock = "^3.14.0"
pytest-asyncio = "^0.24.0"
taskipy = "^1.14.1"
ruff = "^0.11.12"
pre-commit = "^3.6.0"
mypy = "^1.11.0"
ipython = "^8.29.0"  

[tool.poetry.group.dbt.dependencies]
dbt-core = "^1.9.0"
dbt-athena-community = "^1.9.0"  

[tool.poetry.group.airflow.dependencies]
apache-airflow-providers-amazon = "^8.28.0"
apache-airflow-providers-http = "^4.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
extend-exclude = ['migrations', '.venv', '.terraform']

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "N"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--verbose --tb=short"

[tool.taskipy.tasks]
lint = "ruff check ."
format = "ruff format ."
fix = "ruff check . --fix && ruff format ."
check-types = "ruff check --select I001 ."
test = "pytest tests/ -v --cov=src"
test-ci = "pytest tests/ --cov=src --cov-report=xml"
airflow-local = "docker-compose up airflow-init airflow-webserver airflow-scheduler"